--- a/Slovak/main/Calculator.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Calculator.apk/res/values-sk/strings.xml
@@ -29,7 +29,7 @@
     <string name="age_label_weeks">Týždne</string>
     <string name="allow">Súhlasím</string>
     <string name="app_name">Kalkulačka</string>
-    <string name="app_name_danfa">Mi Kalkulačka</string>
+    <string name="app_name_danfa">Xiaomi Kalkulačka</string>
     <string name="app_notification_info">Kalkulačka pracuje na pozadí</string>
     <string name="base_rate">Základná úroková sadzba</string>
     <string name="bmi_error_text">Toto BMI sa zdá byť nesprávne. Uistite sa, že zadaná výška a váha sú správne.</string>
