--- a/Slovak/main/CloudService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CloudService.apk/res/values-sk/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="access_denied">Prístup zamietnutý</string>
     <string name="account">Účet</string>
-    <string name="account_related">Zariadenie je prepojené s Mi účtom (%s). Pripojte sa k sieti pre overenie zariadenia.</string>
+    <string name="account_related">Zariadenie je prepojené s Xiaomi účtom (%s). Pripojte sa k sieti pre overenie zariadenia.</string>
     <string name="activate">Aktivovať</string>
     <string name="activate_find_device_success">Vyhľadávanie zariadenia bolo aktivované.</string>
     <string name="activate_finddevice">Pripojte sa k sieti pre aktiváciu zariadenia</string>
@@ -133,7 +133,7 @@ Naposledy: %2$s"</string>
     <string name="error_credential_fail">Chyba hesla</string>
     <string name="error_data_in_transfer">Vaše dáta sa presúvajú. Čakajte %s hodín.</string>
     <string name="error_data_in_transfer_title">Služby Cloudu sú momentálne nedostupné.</string>
-    <string name="error_forbidden">Synchr. bola deaktivovaná kvôli problémom s vašim Mi účtom.</string>
+    <string name="error_forbidden">Synchr. bola deaktivovaná kvôli problémom s vašim Xiaomi účtom.</string>
     <string name="error_keybag_unknown">Nastala neznáma chyba. Skúste to znova.</string>
     <string name="error_masterkey_changed">Heslo bolo zmenené</string>
     <string name="error_masterkey_exists">Heslo už existuje</string>
@@ -170,10 +170,10 @@ Naposledy: %2$s"</string>
     <string name="find_device_notice_p1">Choďte na</string>
     <string name="find_device_notice_p3">pre získanie polohy, zablokovať, vymazať alebo obnoviť všetky dáta.</string>
     <string name="find_device_operation_failure_rpc">Operácia nemohla byť dokončená kvôli RPC chybe.</string>
-    <string name="find_device_pref_alert_content">Vyhľadávanie zariadenia je prepojené s vašim Mi účtom. Musíte zadať vaše heslo. Bude odoslaná bežná SMS pre aktiváciu tejto služby a spoplatnená vašim operátorom. Ak zmeníte SIM kartu, odošle sa SMS znova pre reaktiváciu tejto služby.</string>
+    <string name="find_device_pref_alert_content">Vyhľadávanie zariadenia je prepojené s vašim Xiaomi účtom. Musíte zadať vaše heslo. Bude odoslaná bežná SMS pre aktiváciu tejto služby a spoplatnená vašim operátorom. Ak zmeníte SIM kartu, odošle sa SMS znova pre reaktiváciu tejto služby.</string>
     <string name="find_device_pref_alert_negtive">Nie ďakujem</string>
     <string name="find_device_pref_alert_positive">OK</string>
-    <string name="find_device_pref_alert_title">Zapamätajte si váš Mi účet a heslo</string>
+    <string name="find_device_pref_alert_title">Zapamätajte si váš Xiaomi účet a heslo</string>
     <string name="find_device_pref_initializing">Inicializácia...</string>
     <string name="find_device_reading_status">Načítavanie...</string>
     <string name="find_device_reading_status_failure">Nebolo možné načítať.</string>
@@ -323,17 +323,17 @@ Ak zmeníte SIM kartu, odošle sa SMS pre aktiváciu tejto služby."</string>
     <string name="micloud_buy_member">Kúpiť členstvo v MiCloud</string>
     <string name="micloud_buy_member_safe">Navýšiť MiCloud</string>
     <string name="micloud_check_sim_notify_text">"Zrejme bola zmenená SIM karta. Prihláste sa
-do vášho Mi účtu pre znovu aktivovanie MiCloud."</string>
+do vášho Xiaomi účtu pre znovu aktivovanie MiCloud."</string>
     <string name="micloud_check_sim_notify_title">Znova aktivovať MiCloud</string>
     <string name="micloud_check_sim_title">"Zrejme bola zmenená SIM karta. Prihláste sa
-do vášho Mi účtu pre znovu aktivovanie MiCloud."</string>
+do vášho Xiaomi účtu pre znovu aktivovanie MiCloud."</string>
     <string name="micloud_confusion_account_hint">Zmeny ktoré urobíte v tomto zariadení sa budú synchronizovať do všetkých vašich zariadení. Pre ochránenie vášho účtu odporúčame deaktivovať synchr. pre ostatné zariadenia ak ich nepoužívate.</string>
     <string name="micloud_confusion_account_name">"Účet: "</string>
-    <string name="micloud_confusion_account_notify_text">Váš Mi účet bol zmenený z iného zariadenia.</string>
+    <string name="micloud_confusion_account_notify_text">Váš Xiaomi účet bol zmenený z iného zariadenia.</string>
     <string name="micloud_confusion_account_notify_title">Overiť účet</string>
-    <string name="micloud_confusion_account_question">Patrí vám Mi účet %s?</string>
-    <string name="micloud_confusion_account_title">Mi účet ID</string>
-    <string name="micloud_confusion_alert_message">Informácie o vašom Mi účte boli zmenené z %s.</string>
+    <string name="micloud_confusion_account_question">Patrí vám Xiaomi účet %s?</string>
+    <string name="micloud_confusion_account_title">Xiaomi účet ID</string>
+    <string name="micloud_confusion_alert_message">Informácie o vašom Xiaomi účte boli zmenené z %s.</string>
     <string name="micloud_confusion_alert_negative">Neskôr</string>
     <string name="micloud_confusion_alert_positive">Podrobnosti</string>
     <string name="micloud_confusion_alert_title">Iné zariadenie mení váš účet</string>
@@ -355,7 +355,7 @@ do vášho Mi účtu pre znovu aktivovanie MiCloud."</string>
     <string name="micloud_confusion_setting_question">Deaktivujte synchr. pre ostatné zariadenia prepojené s vašim účtom.</string>
     <string name="micloud_confusion_setting_title">Príliš mnoho zariadení</string>
     <string name="micloud_confusion_toast_confirm">Zariadenie overené</string>
-    <string name="micloud_confusion_toast_deny">Prihláste sa do vášho Mi účtu</string>
+    <string name="micloud_confusion_toast_deny">Prihláste sa do vášho Xiaomi účtu</string>
     <string name="micloud_confusion_yes">Áno</string>
     <string name="micloud_detail_battery_low">Slabá batéria</string>
     <string name="micloud_detail_battery_low_message">Slabá batéria. Pripojte váš telefón k nabíjačke a synchr.</string>
@@ -406,11 +406,11 @@ do vášho Mi účtu pre znovu aktivovanie MiCloud."</string>
     <string name="micloud_find_device_common_sms_alert_with_charge_hint">Bude vám automaticky odoslaná &lt;xliff:g id=number_sms refersto=1&gt;%1$d&lt;/xliff:g&gt; &lt;font color=#0097FF&gt;&lt;b&gt;platená SMS správa&lt;/b&gt;&lt;/font&gt;.&lt;br/&gt;Po výmene SIM kariet bude automaticky odoslaná &lt;xliff:g id=number_sms refersto=1&gt;%1$d&lt;/xliff:g&gt; &lt;font color=#0097FF&gt;&lt;b&gt;platená SMS správa&lt;/b&gt;&lt;/font&gt;.&lt;br/&gt;Všetky SMS poplatky za vyššie uvedené akcie vám budú účtované vaším operátorom. Spoločnosť Xiaomi vám nebude účtovať žiadne poplatky.</string>
     <string name="micloud_find_device_domestic_sms_alert_with_charge_hint">Bude vám automaticky odoslaná &lt;xliff:g id=number_sms refersto=1&gt;%1$d&lt;/xliff:g&gt; &lt;font color=#0097FF&gt;&lt;b&gt;platená vnútroštátna SMS správa&lt;/b&gt;&lt;/font&gt;.&lt;br/&gt;Po výmene SIM kariet bude automaticky odoslaná &lt;xliff:g id=number_sms refersto=1&gt;%1$d&lt;/xliff:g&gt; &lt;font color=#0097FF&gt;&lt;b&gt;platená vnútroštátna SMS správa&lt;/b&gt;&lt;/font&gt;.&lt;br/&gt;Všetky SMS poplatky za vyššie uvedené akcie vám budú účtované vaším operátorom. Spoločnosť Xiaomi vám nebude účtovať žiadne poplatky.</string>
     <string name="micloud_find_device_finish">Hotovo</string>
-    <string name="micloud_find_device_guide_alert_content">Vyhľadávanie zariadenia je prepojené s vašim Mi účtom. Musíte zadať vaše heslo. Bude odoslaná bežná SMS pre aktiváciu tejto služby a spoplatnená vašim operátorom. Ak zmeníte SIM kartu, odošle sa SMS znova pre reaktiváciu tejto služby.</string>
+    <string name="micloud_find_device_guide_alert_content">Vyhľadávanie zariadenia je prepojené s vašim Xiaomi účtom. Musíte zadať vaše heslo. Bude odoslaná bežná SMS pre aktiváciu tejto služby a spoplatnená vašim operátorom. Ak zmeníte SIM kartu, odošle sa SMS znova pre reaktiváciu tejto služby.</string>
     <string name="micloud_find_device_guide_alert_negtive">Nie</string>
     <string name="micloud_find_device_guide_alert_negtive_activate">Nie</string>
     <string name="micloud_find_device_guide_alert_positive">OK</string>
-    <string name="micloud_find_device_guide_alert_title">Zapamätajte si váš Mi účet a heslo</string>
+    <string name="micloud_find_device_guide_alert_title">Zapamätajte si váš Xiaomi účet a heslo</string>
     <string name="micloud_find_device_guide_button">Povoliť Vyhľadávanie zariadenia</string>
     <string name="micloud_find_device_guide_content">Ak zmeníte vašu SIM kartu, automaticky sa odošle SMS pre aktiváciu tejto funkcie.</string>
     <string name="micloud_find_device_guide_desc_pad">Prihláste sa na i.mi.com pre vyhľadanie, uzamknutie alebo vymazanie vášho zariadenia v prípade jeho straty alebo krádeže.</string>
@@ -472,9 +472,9 @@ do vášho Mi účtu pre znovu aktivovanie MiCloud."</string>
     <string name="micloud_main_memory_low_title">Nie je dostatok voľného miesta na internom úložisku</string>
     <string name="micloud_main_message_master_sync_off">Nastavenie auto synchr. je v roletke.</string>
     <string name="micloud_main_message_not_synced">%s nesynchr.</string>
-    <string name="micloud_main_multi_user_error_message">"Prihlásili ste sa rovnakým Mi účtom ako na primárnom profile. Ak chcete zálohovať vašw dáta:
+    <string name="micloud_main_multi_user_error_message">"Prihlásili ste sa rovnakým Xiaomi účtom ako na primárnom profile. Ak chcete zálohovať vašw dáta:
 
-1.Použite iný Mi účet
+1.Použite iný Xiaomi účet
 2.Preneste vaše dáta do primárneho profilu"</string>
     <string name="micloud_main_multi_user_error_title">MiCloud pozastavený</string>
     <string name="micloud_main_network_abnormal">Nie je možné sa pripojiť k sieti</string>
@@ -615,7 +615,7 @@ Stlačte tlačidlo Nastavenia pre viac možností"</string>
     <string name="micloud_privacy_warning_title">Informácia</string>
     <string name="micloud_proceed">Pokračovať</string>
     <string name="micloud_request_permission_confirm">OK</string>
-    <string name="micloud_request_permission_content">MiCloud vyžaduje povolenia pre synchr. dát. Povoľte MiCloud prístup ku kontaktom, kalendáru, Mi účtu, SIM karte, histórie hovorov a SMS.</string>
+    <string name="micloud_request_permission_content">MiCloud vyžaduje povolenia pre synchr. dát. Povoľte MiCloud prístup ku kontaktom, kalendáru, Xiaomi účtu, SIM karte, histórie hovorov a SMS.</string>
     <string name="micloud_request_permission_title">MiCloud vyžaduje povolenia</string>
     <string name="micloud_request_sync_too_frequent">Príliš veľa požiadaviek. Skúste to znova neskôr.</string>
     <string name="micloud_sec_dspt">a zdieľať dáta s priateľmi.</string>
@@ -780,7 +780,7 @@ Túto službu môžete aktivovať alebo zakázať v Nastaveniach."</string>
 Táto funkcia zašifruje a odošle vaše číslo na server Mi."</string>
     <string name="mx_dspt_provision_privacy_2_sim">"Táto funkcia vyžaduje vaše telefónne číslo. Váš operátor môže spoplatniť dve odoslané SMS správy pre aktivovanie tejto funkcie.
 
-Odoslané ID vášho zariadenia na server Mi bude šifrované."</string>
+Odoslané ID vášho zariadenia na server Xiaomi bude šifrované."</string>
     <string name="mx_dspt_provision_privacy_no_sim">Táto funkcia vyžaduje vaše telefónne číslo. Keď vložíte SIM kartu do telefónu, bude odoslaná SMS pre aktiváciu tejto služby.</string>
     <string name="mx_sub_dspt_provision">Cloud správy</string>
     <string name="mx_sub_dspt_provision_with_voip">Internetové volanie</string>
@@ -809,7 +809,7 @@ Odoslané ID vášho zariadenia na server Mi bude šifrované."</string>
     <string name="passed_synced_time_sec">Synchr. pred %ds</string>
     <string name="password">Heslo</string>
     <string name="pay_info_dialog_confirm_to_pay">Zaplatiť %s</string>
-    <string name="pay_info_dialog_mibi_balance_prefix">Použiť Mi kredity: %s</string>
+    <string name="pay_info_dialog_mibi_balance_prefix">Použiť Xiaomi kredity: %s</string>
     <string name="pay_info_dialog_title">Vyberte spôsob platby</string>
     <string name="permission_status_allow">Povolené</string>
     <string name="permission_status_deny">Nepovolené</string>
@@ -1030,7 +1030,7 @@ Prečítajte si a odsúhlaste naše Podmienky používania a Ochranu súkromia.
     <string name="sync_dspt_provision">"Synch. vaše fotografie, kontakty, poznámky medzi viacerými zariadeniami alebo na "</string>
     <string name="sync_dspt_provision3">". Túto službu môžete aktivovať alebo zakázať v Nastaveniach."</string>
     <string name="sync_dspt_provision_header">Synchr.</string>
-    <string name="sync_dspt_provision_title">Mi Cloud</string>
+    <string name="sync_dspt_provision_title">Xiaomi Cloud</string>
     <string name="sync_item_autofill_summary">Automatické šifrovanie a synchronizovanie hesiel s MiCloud</string>
     <string name="sync_item_autofill_title">Synchronizovať automaticky</string>
     <string name="sync_item_calllog_summary">Synchr. zoznam hovorov z tohto zariadenia</string>
@@ -1044,7 +1044,7 @@ Prečítajte si a odsúhlaste naše Podmienky používania a Ochranu súkromia.
     <string name="sync_off_confirm_content">Po vypnutí správcu hesiel nebudete môcť synchronizovať nové hesla.</string>
     <string name="sync_off_confirm_title">Upozornenie</string>
     <string name="sync_on">Zapnuté</string>
-    <string name="sync_page_autofill_login">Prihláste sa k Mi účtu pre používanie Správcu hesiel</string>
+    <string name="sync_page_autofill_login">Prihláste sa k Xiaomi účtu pre používanie Správcu hesiel</string>
     <string name="sync_page_autofill_title">Správca hesiel</string>
     <string name="sync_page_route_message">Správca hesiel umožňuje šifrovať uložené heslá v cloude. Chcete ho povoliť?</string>
     <string name="sync_page_route_not_now">Nie</string>
