--- a/Slovak/main/Contacts.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Contacts.apk/res/values-sk/strings.xml
@@ -32,7 +32,7 @@
     <string name="add_to_my_contacts">Pridať do Mojich kontaktov</string>
     <string name="add_wait">Pridať pauzu</string>
     <string name="add_xiaomi_account_dialog_btn">Použiť účet Mi</string>
-    <string name="add_xiaomi_account_dialog_msg">Pre čo najväčšie pohodlie zvážte používanie účtu Mi na synchronizáciu a zálohu Vašich kontaktov.</string>
+    <string name="add_xiaomi_account_dialog_msg">Pre čo najväčšie pohodlie zvážte používanie účtu Xiaomi na synchronizáciu a zálohu Vašich kontaktov.</string>
     <string name="add_xiaomi_account_dialog_title">Zvoliť účet synchr.</string>
     <string name="aggregation_suggestion_edit_dialog_message">Prepnúť do úpravy zvoleného kontaktu? Doposiaľ zadané informácie budú skopírované.</string>
     <string name="aggregation_suggestion_edit_dialog_title">Upraviť vybrané kontakty</string>
@@ -214,7 +214,7 @@
     <string name="cloud_recommend_msg">Dotykom synchronizujete kontakty s MiCloud.</string>
     <string name="cloud_state_disabled">Synchr. s MiCloud je vypnutá</string>
     <string name="cloud_state_loading">Načítavanie...</string>
-    <string name="cloud_state_sync_finished">Synchr. s Mi Cloud</string>
+    <string name="cloud_state_sync_finished">Synchr. s Xiaomi Cloud</string>
     <string name="cloud_state_syncing">Synchr. s MiCloud</string>
     <string name="cloud_upgrade_recommend">Nie je možné synchronizovať kontakty z dôvodu nedostatku miesta na cloudovom úložisku.</string>
     <string name="combined_title_and_miprofile_swaped">%1$s, %2$s</string>
@@ -257,7 +257,7 @@
     <string name="contact_detail_miprofile_accept_fail_toast">Nebolo možné vymeniť si karty kontaktu</string>
     <string name="contact_detail_miprofile_accept_success_toast">Vymeniť karty kontaktu</string>
     <string name="contact_detail_miprofile_binded_label">Pridané</string>
-    <string name="contact_detail_miprofile_exchange_closed">"S týmto Mi účtom nie je prepojené žiadne telefónne číslo
+    <string name="contact_detail_miprofile_exchange_closed">"S týmto Xiaomi účtom nie je prepojené žiadne telefónne číslo
 Karty kontaktu sú deaktivované"</string>
     <string name="contact_detail_miprofile_privacy_settings">Požadovať povolenie pre zobrazenie</string>
     <string name="contact_detail_miprofile_request">Vymeniť si karty kontaktu</string>
@@ -637,14 +637,14 @@ Chyba: \"%s\""</string>
     <string name="import_to_xiaomi_account_confirm">Presunúť</string>
     <string name="import_to_xiaomi_account_progress_finish">Presun ukončený</string>
     <string name="import_to_xiaomi_account_progress_message">Presúvanie kontaktov...</string>
-    <string name="import_to_xiaomi_account_progress_title">Presúvanie kontaktov na Mi účet</string>
-    <string name="import_to_xiaomi_account_title">Importovať kontakty na Mi účet?</string>
+    <string name="import_to_xiaomi_account_progress_title">Presúvanie kontaktov na Xiaomi účet</string>
+    <string name="import_to_xiaomi_account_title">Importovať kontakty na Xiaomi účet?</string>
     <string name="import_vcard_description">Importovať kontakty z SD karty</string>
     <string name="import_vcard_dialog_message">Importovať vCard?</string>
     <string name="import_weibo_dialog_title">Import kontakty z sina weibo</string>
     <string name="import_weibo_error_no_matched_contacts">Done updating contacts: no matched contacts</string>
     <string name="import_weibo_error_no_network">Done updating contacts: network error</string>
-    <string name="import_weibo_error_no_xiaomi_phone">Done updating contacts: no phone numbers found under XiaoMi account</string>
+    <string name="import_weibo_error_no_xiaomi_phone">Done updating contacts: no phone numbers found under XiaoXiaomi account</string>
     <string name="import_weibo_error_unknown">Done updating contacts: unknown error</string>
     <string name="import_weibo_error_user_cancel">Done updating contacts: user canceled</string>
     <string name="import_weibo_fetch_followers">Získavanie Sina Weibo priateľov...</string>
@@ -794,11 +794,11 @@ Chyba: \"%s\""</string>
     <string name="menu_viewContact">Zobraziť kontakt</string>
     <string name="merge_contact_message">Kontakty (%1$d) s podobnými informáciami</string>
     <string name="messageShortcutActivityTitle">Výber čísla pre správu</string>
-    <string name="miprofile_account_type">"Mi účet "</string>
+    <string name="miprofile_account_type">"Xiaomi účet "</string>
     <string name="miprofile_alertdialog_edit">Zadajte meno</string>
     <string name="miprofile_alertdialog_message">Zobraziť toto meno kontaktom ak žiadate výmenu kariet.</string>
     <string name="miprofile_alertdialog_title">Zadajte meno</string>
-    <string name="miprofile_bind_account_alertdialog_message">Musíte pridať vaše telefónne číslo do Mi účtu pre používanie tejto funkcie.</string>
+    <string name="miprofile_bind_account_alertdialog_message">Musíte pridať vaše telefónne číslo do Xiaomi účtu pre používanie tejto funkcie.</string>
     <string name="miprofile_bind_account_alertdialog_positive">Pridať číslo</string>
     <string name="miprofile_bind_account_alertdialog_title">Pridať telefónne číslo</string>
     <string name="miprofile_contact_add">Pridať</string>
@@ -808,7 +808,7 @@ Chyba: \"%s\""</string>
     <string name="miprofile_contact_verifying">Overovanie</string>
     <string name="miprofile_edit_title">Upraviť profil</string>
     <string name="miprofile_error_accept_self">Nie je možné vymeniť si vlastnú kartu kontaktu</string>
-    <string name="miprofile_error_no_miaccount">Prihláste sa do vášho Mi účtu</string>
+    <string name="miprofile_error_no_miaccount">Prihláste sa do vášho Xiaomi účtu</string>
     <string name="miprofile_error_not_opened">Vypnúť karty kontaktu</string>
     <string name="miprofile_error_not_set">Vaša karta kontaktu nebola synchronizovaná na server</string>
     <string name="miprofile_error_unknown">Neznáma chyba</string>
@@ -1106,7 +1106,7 @@ Synchronizujte ich teraz."</string>
     <string name="pref_rcs_backup_restore_title">Nastavenie zálohy a obnovy</string>
     <string name="pref_summary_import_from_account">Kopírovanie kontaktov z Google a Exchange na účet Mi</string>
     <string name="pref_title_account_import">Import kontaktov</string>
-    <string name="pref_title_import_from_account">Import na Mi účet</string>
+    <string name="pref_title_import_from_account">Import na Xiaomi účet</string>
     <string name="preference_auto_ip_summary_disable">Nie je povolené</string>
     <string name="preference_auto_ip_summary_on">"IP operátora: %s"</string>
     <string name="preference_auto_ip_title">Auto IP</string>
