--- a/Slovak/main/ContactsProvider.apk/res/values-sk/strings.xml
+++ b/Slovak/main/ContactsProvider.apk/res/values-sk/strings.xml
@@ -22,7 +22,7 @@
     <string name="send_sms">Odoslať správu</string>
     <string name="sharedUserLabel">Android Core Apps</string>
     <string name="sim_state_changed">SIM karta bola zmenená</string>
-    <string name="third_party_delete_contact_info">\"%s\" vymaže vaše Mi kontakty. Použite systémovú aplikáciu Kontakty pre bezpečné mazanie Vašich kontaktov.</string>
+    <string name="third_party_delete_contact_info">\"%s\" vymaže vaše Xiaomi kontakty. Použite systémovú aplikáciu Kontakty pre bezpečné mazanie Vašich kontaktov.</string>
     <string name="upgrade_msg">Aktualizácia databázy kontaktov.</string>
     <string name="upgrade_out_of_memory_notification_text">Výberom tejto možnosti dokončíte upgrade.</string>
     <string name="upgrade_out_of_memory_notification_ticker">Upgrade kontaktu vyžaduje viac pamäti</string>
