--- a/Slovak/main/DownloadProvider.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DownloadProvider.apk/res/values-sk/strings.xml
@@ -68,7 +68,7 @@
     <string name="privacy_notif_content">Zobraziť podrobnosti.</string>
     <string name="privacy_notif_title">Xunlei sťahovanie je povolené</string>
     <string name="privacy_tip_cancel">Zrušiť</string>
-    <string name="privacy_tip_content">"Use Xunlei Accelerator to speed up downloads? The URL of the download's host will uploaded to Xunlei's servers. Your Mi Account details will also be uploaded to check if you have any active subscriptions to this service."</string>
+    <string name="privacy_tip_content">"Use Xunlei Accelerator to speed up downloads? The URL of the download's host will uploaded to Xunlei's servers. Your Xiaomi Account details will also be uploaded to check if you have any active subscriptions to this service."</string>
     <string name="privacy_tip_ok">OK</string>
     <string name="privacy_tip_title">Použiť Xunlei sťahovanie?</string>
     <string name="recommended_file_size_download_in_mobile">Stiahnuť tento súbor %s cez mobilné dáta?</string>
