--- a/Slovak/main/MiDrop.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiDrop.apk/res/values-sk/strings.xml
@@ -27,7 +27,7 @@
     <string name="help">Pomoc</string>
     <string name="i_know">OK</string>
     <string name="intro_midrop">MiDrop</string>
-    <string name="intro_page1_text1">Zdieľajte súbory medzi Mi zariadeniami</string>
+    <string name="intro_page1_text1">Zdieľajte súbory medzi Xiaomi zariadeniami</string>
     <string name="intro_page1_text2">Teraz je to jednoduchšie ako kedykoľvek predtým</string>
     <string name="intro_page2_choose_files">Vyberte súbor a zvoľte \"Odoslať\"</string>
     <string name="intro_page2_click_to_send">Vyberte \"Odoslať\"</string>
