--- a/Slovak/main/MiMediaEditor.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiMediaEditor.apk/res/values-sk/strings.xml
@@ -438,7 +438,7 @@
     <string name="grant_permission_unlock_and_set">Odomknúť a povoliť</string>
     <string name="have_known">Rozumiem</string>
     <string name="help">Nenašli sa zariadenia?</string>
-    <string name="help_content">Ak nemôžete nájsť potrebné zariadenie, požiadajte druhú osobu, aby spustila službu Mi Share.</string>
+    <string name="help_content">Ak nemôžete nájsť potrebné zariadenie, požiadajte druhú osobu, aby spustila službu Xiaomi Share.</string>
     <string name="hisense">Hisense</string>
     <string name="hisense_phone">Hisense</string>
     <string name="home_menu_art_still">Umenie</string>
@@ -561,14 +561,14 @@
     <string name="main_save_origin">Uložiť originálny súbor</string>
     <string name="meizu">Meizu</string>
     <string name="meizu_phone">Meizu</string>
-    <string name="mi_10i">Mi 10I</string>
-    <string name="mi_10t">Mi 10T</string>
-    <string name="mi_10t_lite">Mi 10T Lite</string>
-    <string name="mi_9_lite">Mi 9 Lite</string>
-    <string name="mi_9t">Mi 9T</string>
-    <string name="mi_9t_pro">Mi 9T Pro</string>
-    <string name="mi_drop">Mi Share</string>
-    <string name="mi_note_10">Mi Note 10</string>
+    <string name="mi_10i">Xiaomi 10I</string>
+    <string name="mi_10t">Xiaomi 10T</string>
+    <string name="mi_10t_lite">Xiaomi 10T Lite</string>
+    <string name="mi_9_lite">Xiaomi 9 Lite</string>
+    <string name="mi_9t">Xiaomi 9T</string>
+    <string name="mi_9t_pro">Xiaomi 9T Pro</string>
+    <string name="mi_drop">Xiaomi Share</string>
+    <string name="mi_note_10">Xiaomi Note 10</string>
     <string name="midnight">Noc</string>
     <string name="miuix_appcompat_action_mode_deselect_all">Zrušiť výber</string>
     <string name="miuix_appcompat_action_mode_select_all">Vybrať všetko</string>
@@ -758,7 +758,7 @@
     <string name="photo_editor_crop_size_origin">Originál</string>
     <string name="photo_editor_doodle">Čmáranica</string>
     <string name="photo_editor_filter">Filter</string>
-    <string name="photo_editor_font_default">Mi Lanting (Bežný)</string>
+    <string name="photo_editor_font_default">Xiaomi Lanting (Bežný)</string>
     <string name="photo_editor_frame">Rámik</string>
     <string name="photo_editor_label">Upraviť</string>
     <string name="photo_editor_long_crop">Orezať</string>
@@ -1189,7 +1189,7 @@
     <string name="time_picker_dialog_title">Nastaviť čas</string>
     <string name="time_picker_label_hour">H</string>
     <string name="time_picker_label_minute">M</string>
-    <string name="tips_prompt_enable_midrop">Mi Share</string>
+    <string name="tips_prompt_enable_midrop">Xiaomi Share</string>
     <string name="toast_download_with_metered_network_btn_continue">Stiahnuť</string>
     <string name="toast_download_with_metered_network_msg">Zdá sa, že vaše zariadenie nie je pripojené k sieti Wi-Fi. Stiahnuť položky pomocou mobilných dát?</string>
     <string name="toast_download_with_metered_network_title">Upozornenie na využívanie dát</string>
@@ -1554,34 +1554,34 @@
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">Str</string>
     <string name="xiaomi">Mi</string>
-    <string name="xiaomi_10">Mi 10</string>
-    <string name="xiaomi_10_lite">Mi 10 Lite</string>
-    <string name="xiaomi_10_lite_5g">Mi 10 Lite 5G</string>
-    <string name="xiaomi_10_pro">Mi 10 Pro</string>
-    <string name="xiaomi_10_ultra">Mi 10 Ultra</string>
-    <string name="xiaomi_11">Mi 11</string>
-    <string name="xiaomi_6">Mi 6</string>
-    <string name="xiaomi_6x">Mi 6X</string>
-    <string name="xiaomi_8">Mi 8</string>
-    <string name="xiaomi_8_exp">Explorer edícia Mi 8</string>
-    <string name="xiaomi_8_se">Mi 8 SE</string>
-    <string name="xiaomi_8_ud">Mi 8 Pro</string>
-    <string name="xiaomi_8_young">Mi 8 Lite</string>
-    <string name="xiaomi_9">Mi 9</string>
-    <string name="xiaomi_9_pro">Mi 9 Pro 5G</string>
-    <string name="xiaomi_9_se">Mi 9 SE</string>
-    <string name="xiaomi_cc_9">Mi CC9</string>
-    <string name="xiaomi_cc_9_custom">Meitu edícia Mi CC9</string>
-    <string name="xiaomi_cc_9_pro">Mi CC9 Pro</string>
-    <string name="xiaomi_cc_9e">Mi CC9e</string>
-    <string name="xiaomi_max_3">Mi MAX 3</string>
-    <string name="xiaomi_mix_2">Mi MIX 2</string>
-    <string name="xiaomi_mix_2s">Mi MIX 2S</string>
-    <string name="xiaomi_mix_3">Mi MIX 3</string>
-    <string name="xiaomi_mix_3_5g">Mi MIX 3 5G</string>
-    <string name="xiaomi_mix_alpha">Mi MIX Alpha</string>
-    <string name="xiaomi_note_10_lite">Mi Note 10 Lite</string>
-    <string name="xiaomi_note_3">Mi Note 3</string>
+    <string name="xiaomi_10">Xiaomi 10</string>
+    <string name="xiaomi_10_lite">Xiaomi 10 Lite</string>
+    <string name="xiaomi_10_lite_5g">Xiaomi 10 Lite 5G</string>
+    <string name="xiaomi_10_pro">Xiaomi 10 Pro</string>
+    <string name="xiaomi_10_ultra">Xiaomi 10 Ultra</string>
+    <string name="xiaomi_11">Xiaomi 11</string>
+    <string name="xiaomi_6">Xiaomi 6</string>
+    <string name="xiaomi_6x">Xiaomi 6X</string>
+    <string name="xiaomi_8">Xiaomi 8</string>
+    <string name="xiaomi_8_exp">Explorer edícia Xiaomi 8</string>
+    <string name="xiaomi_8_se">Xiaomi 8 SE</string>
+    <string name="xiaomi_8_ud">Xiaomi 8 Pro</string>
+    <string name="xiaomi_8_young">Xiaomi 8 Lite</string>
+    <string name="xiaomi_9">Xiaomi 9</string>
+    <string name="xiaomi_9_pro">Xiaomi 9 Pro 5G</string>
+    <string name="xiaomi_9_se">Xiaomi 9 SE</string>
+    <string name="xiaomi_cc_9">Xiaomi CC9</string>
+    <string name="xiaomi_cc_9_custom">Meitu edícia Xiaomi CC9</string>
+    <string name="xiaomi_cc_9_pro">Xiaomi CC9 Pro</string>
+    <string name="xiaomi_cc_9e">Xiaomi CC9e</string>
+    <string name="xiaomi_max_3">Xiaomi MAX 3</string>
+    <string name="xiaomi_mix_2">Xiaomi MIX 2</string>
+    <string name="xiaomi_mix_2s">Xiaomi MIX 2S</string>
+    <string name="xiaomi_mix_3">Xiaomi MIX 3</string>
+    <string name="xiaomi_mix_3_5g">Xiaomi MIX 3 5G</string>
+    <string name="xiaomi_mix_alpha">Xiaomi MIX Alpha</string>
+    <string name="xiaomi_note_10_lite">Xiaomi Note 10 Lite</string>
+    <string name="xiaomi_note_3">Xiaomi Note 3</string>
     <string name="xiaomi_phone">Xiaomi</string>
     <string name="xiaomi_poco_f1">POCO F1</string>
     <string name="xiaomi_poco_m2">POCO M2</string>
