--- a/Slovak/main/MiRecycle.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiRecycle.apk/res/values-sk/strings.xml
@@ -46,7 +46,7 @@
     <string name="powered_by_cashify">Poskytuje</string>
     <string name="push_ht_content">Otvorte Optimalizáciu a nájdite Test Hardware</string>
     <string name="push_ht_title">Skontrolujte nové funkcie v Optimalizácií</string>
-    <string name="push_oa_title">Mi Protect</string>
+    <string name="push_oa_title">Xiaomi Protect</string>
     <string name="reschedule">Reschedule</string>
     <string name="result_no_fail">Všetko je v poriadku</string>
     <string name="search_menu_title">Vyhľadať</string>
