--- a/Slovak/main/MiService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiService.apk/res/values-sk/strings.xml
@@ -147,7 +147,7 @@
     <string name="permission_china_version_msg">Prečítajte si naše Podmienky používania a Ochranu súkromia.</string>
     <string name="permission_complete">Hotovo</string>
     <string name="permission_contacts_info">Prístup k informáciám o účte</string>
-    <string name="permission_contacts_introduce">Pre prihlásenie k Mi účtu</string>
+    <string name="permission_contacts_introduce">Pre prihlásenie k Xiaomi účtu</string>
     <string name="permission_device_info">Prístup k info o zariadení</string>
     <string name="permission_device_introduce">Pre zistenie záručnej doby</string>
     <string name="permission_exit">Ukončiť</string>
