--- a/Slovak/main/MiSettings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiSettings.apk/res/values-sk/strings.xml
@@ -418,7 +418,7 @@ nie sú generované v Druhom profile"</string>
     <string name="usage_focus_title_level3">Pozdvihnite svoje vedomie</string>
     <string name="usage_focus_title_level4">Nájdite radosť z konzistencie</string>
     <string name="usage_focus_title_level5">Zostaňte sústredený</string>
-    <string name="usage_home_permission_account_summary">Pre prihlásenie do Mi účtu</string>
+    <string name="usage_home_permission_account_summary">Pre prihlásenie do Xiaomi účtu</string>
     <string name="usage_home_permission_account_title">Prístup k osobným informáciám</string>
     <string name="usage_home_permission_phone_summary">Pre identifikáciu vášho zariadenia cez VAID</string>
     <string name="usage_home_permission_phone_title">Prístup k informáciám o zariadení</string>
