--- a/Slovak/main/MiSound.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiSound.apk/res/values-sk/strings.xml
@@ -155,7 +155,7 @@
     <string name="multi_music_coexistence_summary">Neprispôsobovať hlasitosť médií počas prichádzajúcich upozornení alebo prehrávania zvuku z iného zdroja</string>
     <string name="multi_music_coexistence_title">Viacero zvukových zdrojov</string>
     <string name="music_add_my_sound">Pridať vlastné nastavenie</string>
-    <string name="music_app_unavailable">Uistite sa, že je dostupná aplikácia Mi Hudba.</string>
+    <string name="music_app_unavailable">Uistite sa, že je dostupná aplikácia Xiaomi Hudba.</string>
     <string name="music_audio_effect_optimize">Nastavenie zvuku</string>
     <string name="music_audio_effect_optimize_summary">Dirac, slúchadlá a ostatné nastavenia</string>
     <string name="music_audio_effect_optimize_summary_with_hd">Dirac, HD Sound, slúchadlá a ostatné nastavenia zvuku</string>
@@ -169,26 +169,26 @@
     <string name="music_delete">Vymazať</string>
     <string name="music_delete_sound_title">Vymazanie nastavenia</string>
     <string name="music_dirac_control">Vylepšiť kvalitu zvuku</string>
-    <string name="music_dirac_mode_cancelling">Mi Noise Cancelling 3.5mm</string>
+    <string name="music_dirac_mode_cancelling">Xiaomi Noise Cancelling 3.5mm</string>
     <string name="music_dirac_mode_capsule">MiCapsule</string>
-    <string name="music_dirac_mode_earbuds">Mi slúchadlá</string>
+    <string name="music_dirac_mode_earbuds">Xiaomi slúchadlá</string>
     <string name="music_dirac_mode_general">Obyčajné</string>
     <string name="music_dirac_mode_general_earbuds">Bežné slúchadlá</string>
     <string name="music_dirac_mode_general_inear">Bežné špunty</string>
-    <string name="music_dirac_mode_headset">Mi Slúchadlá</string>
-    <string name="music_dirac_mode_headset_comfort">Mi Comfort</string>
-    <string name="music_dirac_mode_in_ear">Mi špunty</string>
-    <string name="music_dirac_mode_in_ear_pro">Mi In-Ear Pro</string>
-    <string name="music_dirac_mode_india_earphones">Mi Slúchadlá</string>
-    <string name="music_dirac_mode_india_earphones_basic">Mi Slúchadlá Základné</string>
+    <string name="music_dirac_mode_headset">Xiaomi Slúchadlá</string>
+    <string name="music_dirac_mode_headset_comfort">Xiaomi Comfort</string>
+    <string name="music_dirac_mode_in_ear">Xiaomi špunty</string>
+    <string name="music_dirac_mode_in_ear_pro">Xiaomi In-Ear Pro</string>
+    <string name="music_dirac_mode_india_earphones">Xiaomi Slúchadlá</string>
+    <string name="music_dirac_mode_india_earphones_basic">Xiaomi Slúchadlá Základné</string>
     <string name="music_dirac_mode_off">Dirac vypnutý</string>
-    <string name="music_dirac_mode_piston_1">Mi Piston-1</string>
-    <string name="music_dirac_mode_piston_100">Mi Pistons</string>
-    <string name="music_dirac_mode_piston_2">Mi Piston-2</string>
+    <string name="music_dirac_mode_piston_1">Xiaomi Piston-1</string>
+    <string name="music_dirac_mode_piston_100">Xiaomi Pistons</string>
+    <string name="music_dirac_mode_piston_2">Xiaomi Piston-2</string>
     <string name="music_dirac_mode_piston_basic">Základné</string>
     <string name="music_dirac_mode_piston_color">Color Edition</string>
-    <string name="music_dirac_mode_piston_standard">Mi Piston-3</string>
-    <string name="music_dirac_mode_piston_youth">Mi Youth</string>
+    <string name="music_dirac_mode_piston_standard">Xiaomi Piston-3</string>
+    <string name="music_dirac_mode_piston_youth">Xiaomi Youth</string>
     <string name="music_dirac_mode_reduction_noise">Redukcia šumu (USB-C)</string>
     <string name="music_dolby_mode_movie">Video</string>
     <string name="music_dolby_mode_music">Hudba</string>
