--- a/Slovak/main/MiSupport.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiSupport.apk/res/values-sk/strings.xml
@@ -79,11 +79,11 @@ enters this code in Remote assistant."</string>
     <string name="dialog_agree_ok">Agree</string>
     <string name="dialog_agree_title">Terms and Conditions</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="dialog_control_mi_account_tips">Mi Account %s wants to control your phone. Accept?</string>
+    <string name="dialog_control_mi_account_tips">Xiaomi Account %s wants to control your phone. Accept?</string>
     <string name="dialog_control_name_phone_tips">%1$s (%2$s) wants to control your phone. Accept?</string>
     <string name="dialog_control_pure_phone_tips">%s wants to control your phone. Accept?</string>
     <string name="dialog_control_title_tips">Control request</string>
-    <string name="dialog_mi_id">Mi Account ID: %s</string>
+    <string name="dialog_mi_id">Xiaomi Account ID: %s</string>
     <string name="dialog_nick_name">Nickname: %s</string>
     <string name="dialog_phone_bind_mi">Phone number: %s</string>
     <string name="duplicate_request">"Session is in progress, don't send duplicate requests."</string>
@@ -95,35 +95,35 @@ enters this code in Remote assistant."</string>
     <string name="enter_local_phone">Enter your phone number so that other people could find you</string>
     <string name="enter_phone">Enter phone number</string>
     <string name="enter_to_phone">"Enter the other person's phone number"</string>
-    <string name="err_input_account_hint">Enter Mi Account/Phone/Email</string>
+    <string name="err_input_account_hint">Enter Xiaomi Account/Phone/Email</string>
     <string name="err_no_account">"This account doesn't exist"</string>
     <string name="err_pls_input_pwd">Enter password</string>
     <string name="get_err_msg">"Couldn't get info, try again"</string>
     <string name="get_user_info_failed">"Couldn't get user info, sign in again"</string>
     <string name="homepage_tips_fluency">"In order to make the process smooth and save mobile data,
 "</string>
-    <string name="homepage_tips_help">"If you encounter any issues while using your Mi Phone,
+    <string name="homepage_tips_help">"If you encounter any issues while using your Xiaomi Phone,
 you can ask your friends for help here."</string>
     <string name="homepage_tips_wifi">make sure both devices are connected to Wi-Fi.</string>
-    <string name="input_account_hint">Mi Account/Phone/Email</string>
+    <string name="input_account_hint">Xiaomi Account/Phone/Email</string>
     <string name="is_logging_off">Sign up</string>
     <string name="kick_off">Your account was used to sign in on another device. Sign in again.</string>
     <string name="login_enter">Sign in</string>
     <string name="login_failed">"Couldn't sign in"</string>
     <string name="login_failure">"Couldn't sign in, check network and try again."</string>
-    <string name="login_logined_account">You can sign in with Mi Account (%s)</string>
-    <string name="login_miui_no_accounts">"Couldn't sign in, Mi Account wasn't found."</string>
+    <string name="login_logined_account">You can sign in with Xiaomi Account (%s)</string>
+    <string name="login_miui_no_accounts">"Couldn't sign in, Xiaomi Account wasn't found."</string>
     <string name="login_step2_checking">Verifying…</string>
     <string name="login_step2_code_tip">You activated two-step verification. Enter the code from the verification app.</string>
     <string name="login_step2_device_trust">I trust this device</string>
-    <string name="login_system_account_failed">"Couldn't sign in with Mi Account"</string>
+    <string name="login_system_account_failed">"Couldn't sign in with Xiaomi Account"</string>
     <string name="logining">Signing in…</string>
     <string name="logoff">Sign out</string>
     <string name="message_camera_permission">Access to Camera is restricted. Allow in the Settings?</string>
     <string name="message_contact_permission">Access to Contacts is restricted. Allow in the Settings?</string>
     <string name="message_floating_window_permission">Floating windows are restricted. Allow in the Settings?</string>
     <string name="message_record_audio_permission">Recording audio is restricted. Allow in the Settings?</string>
-    <string name="mi_account_name">Mi Account</string>
+    <string name="mi_account_name">Xiaomi Account</string>
     <string name="missing_context">"Can't start engine"</string>
     <string name="network_unavailable">"Couldn't connect to the network"</string>
     <string name="no_helper">No people ready to help</string>
@@ -131,7 +131,7 @@ you can ask your friends for help here."</string>
     <string name="passport_access_denied">Prístup zamietnutý</string>
     <string name="passport_account_hint_text">Email alebo telefónne číslo</string>
     <string name="passport_account_identity_title">Overiť vašu identitu</string>
-    <string name="passport_account_label">Mi účet</string>
+    <string name="passport_account_label">Xiaomi účet</string>
     <string name="passport_account_name">Účet: %1$s</string>
     <string name="passport_account_not_activated">Účet nebol aktivovaný</string>
     <string name="passport_account_not_actived">Váš účet nebol aktivovaný</string>
@@ -163,11 +163,11 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_delete_account">Odhlásiť sa</string>
     <string name="passport_downlink_reg">Vytvoriť účet pomocou telefónneho čísla</string>
     <string name="passport_email">Emailová adresa</string>
-    <string name="passport_email_or_id_hint_text">Emailová adresa alebo Mi ID</string>
+    <string name="passport_email_or_id_hint_text">Emailová adresa alebo Xiaomi ID</string>
     <string name="passport_email_reg_success_summary">%1$s bol prepojený s vašim účtom. Môžete sa ním prihlásiť alebo obnoviť vaše heslo.</string>
     <string name="passport_error_device_id">Nie je možné načítať ID zariadenia</string>
-    <string name="passport_error_dup_email">Táto emailová adresa už je prepojená s iným Mi účtom</string>
-    <string name="passport_error_dup_phone">Toto telefónne číslo už je prepojené s iným Mi účtom</string>
+    <string name="passport_error_dup_email">Táto emailová adresa už je prepojená s iným Xiaomi účtom</string>
+    <string name="passport_error_dup_phone">Toto telefónne číslo už je prepojené s iným Xiaomi účtom</string>
     <string name="passport_error_email">Zadaná emailová adresa nie je správna</string>
     <string name="passport_error_empty_captcha_code">Zadajte passport_captcha kód</string>
     <string name="passport_error_empty_email">Zadajte emailovú adresu</string>
@@ -199,7 +199,7 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_getting_verify_code">Získavanie</string>
     <string name="passport_i_know">Viem</string>
     <string name="passport_identitfication_expired">Platnosť overovacieho kódu skončila</string>
-    <string name="passport_imei_permission_denied_message">"Vyžadujeme prístup k IMEI vášho zariadenia. Mi účet využíva IMEI pre identifikáciu zariadenia na ktoré ste prihlásený pre zabezpečenie vášho účtu."</string>
+    <string name="passport_imei_permission_denied_message">"Vyžadujeme prístup k IMEI vášho zariadenia. Xiaomi účet využíva IMEI pre identifikáciu zariadenia na ktoré ste prihlásený pre zabezpečenie vášho účtu."</string>
     <string name="passport_imei_permission_denied_title">Prístup k IMEI</string>
     <string name="passport_input_captcha_hint">Zadajte kód</string>
     <string name="passport_input_password_for_login">Toto číslo už je spárované s existujúcim účtom, zadajte vaše heslo</string>
@@ -212,16 +212,16 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_login_check_find_device">Kontrola stavu vyhľadania zariadenia...</string>
     <string name="passport_login_check_find_device_failed_title">Nebolo možné skontrolovať stav vyhľadávania zariadenia.</string>
     <string name="passport_login_failed">Nie je možné sa prihlásiť</string>
-    <string name="passport_login_find_device_bind">Toto zariadenie je prepojené s Mi účtom (%s).</string>
+    <string name="passport_login_find_device_bind">Toto zariadenie je prepojené s Xiaomi účtom (%s).</string>
     <string name="passport_login_instead_reg">Použiť toto číslo</string>
     <string name="passport_login_instead_reg_with_email">Použiť tento email</string>
     <string name="passport_login_notice">Prihlasovanie...</string>
-    <string name="passport_login_prompt">Jeden Mi účet pre všetky Mi služby.</string>
-    <string name="passport_login_title">Prihlásiť sa k Mi účtu</string>
+    <string name="passport_login_prompt">Jeden Xiaomi účet pre všetky Xiaomi služby.</string>
+    <string name="passport_login_title">Prihlásiť sa k Xiaomi účtu</string>
     <string name="passport_login_using_other_ways">Prihlásiť sa iným spôsobom</string>
-    <string name="passport_login_with_email_or_id">Prihlásiť sa emailovou adresou alebo Mi ID</string>
+    <string name="passport_login_with_email_or_id">Prihlásiť sa emailovou adresou alebo Xiaomi ID</string>
     <string name="passport_message_dialog_title">Overovací kód v správe</string>
-    <string name="passport_miui_provision_find_status_text">Toto zariadenie je prepojené s existujúcim Mi účtom ID（%1$s), musíte zadať heslo pre overenie zariadenia.
+    <string name="passport_miui_provision_find_status_text">Toto zariadenie je prepojené s existujúcim Xiaomi účtom ID（%1$s), musíte zadať heslo pre overenie zariadenia.
 (odblokovacie čislo: %2$s)"</string>
     <string name="passport_next">Ďalej</string>
     <string name="passport_notification_title">Chyba prihlásenia pre %1$s</string>
@@ -237,11 +237,11 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_quick_login_title">Zadajte vaše heslo</string>
     <string name="passport_re_get_verify_code">Získať kód znova</string>
     <string name="passport_re_register">Prihlásiť sa znova</string>
-    <string name="passport_recycle_account_prompt">Je toto váš Mi účet?</string>
+    <string name="passport_recycle_account_prompt">Je toto váš Xiaomi účet?</string>
     <string name="passport_reg_btn_using_other_phone">Použiť alternatívne telefónne číslo</string>
     <string name="passport_reg_failed">Nie je možné vytvoriť účet</string>
-    <string name="passport_reg_new">Vytvoriť Mi účet</string>
-    <string name="passport_reg_prompt">Nemáte Mi účet? Vytvorte si ho zdarma.</string>
+    <string name="passport_reg_new">Vytvoriť Xiaomi účet</string>
+    <string name="passport_reg_prompt">Nemáte Xiaomi účet? Vytvorte si ho zdarma.</string>
     <string name="passport_reg_sms_send_prompt">Odoslať overovací kód na %s</string>
     <string name="passport_reg_success">Účet vytvorený</string>
     <string name="passport_reg_success_summary">%1$s bol prepojený s vašim účtom. Môžete sa ním prihlásiť alebo obnoviť vaše heslo.</string>
@@ -272,7 +272,7 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_reset_password_title">Obnoviť heslo</string>
     <string name="passport_restart">Skúsiť znova</string>
     <string name="passport_restart_register_prompt">Pre vytvorenie vášho účtu môže byť vyžadovaná nová overovacia správa.</string>
-    <string name="passport_restart_register_title">Vytvoriť Mi účet</string>
+    <string name="passport_restart_register_title">Vytvoriť Xiaomi účet</string>
     <string name="passport_retry">Znova</string>
     <string name="passport_select_reg_ways_title">Zaregistrovať sa iným spôsobom</string>
     <string name="passport_send_too_many_code">Bolo zaslaných príliš mnoho overovacích kódov na toto číslo. Musíte počkať 24 hodín a skúste to znova.</string>
@@ -280,7 +280,7 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_sim_index_info">SIM karta %1$d - %2$s</string>
     <string name="passport_skip_login">Preskočiť</string>
     <string name="passport_skip_register">Preskočiť</string>
-    <string name="passport_skip_setup_account_msg">Môžete nastaviť Mi účet neskôr.</string>
+    <string name="passport_skip_setup_account_msg">Môžete nastaviť Xiaomi účet neskôr.</string>
     <string name="passport_skip_setup_account_title">Preskočiť</string>
     <string name="passport_title_reg">Vytvoriť účet</string>
     <string name="passport_trust_device">Dôverovať tomuto zariadeniu</string>
@@ -288,7 +288,7 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_uplink_reg">Použiť telefónne číslo</string>
     <string name="passport_uplink_slot1_reg">Použiť SIM 1</string>
     <string name="passport_uplink_slot2_reg">Použiť SIM 2</string>
-    <string name="passport_use_generated_pwd_message">Uistite sa, že si pamätáte svoje heslo. Môžete sa ním prihlásiť na inom Mi zariadení.</string>
+    <string name="passport_use_generated_pwd_message">Uistite sa, že si pamätáte svoje heslo. Môžete sa ním prihlásiť na inom Xiaomi zariadení.</string>
     <string name="passport_use_generated_pwd_title">Pamätajte si svoje heslo!</string>
     <string name="passport_user_agreement">Podmienky používania</string>
     <string name="passport_user_agreement_p1">"Súhlasíte s "</string>
@@ -305,9 +305,9 @@ Skontrolujte aj SPAM."</string>
     <string name="passport_wrong_password">Heslo nie je správne</string>
     <string name="passport_wrong_phone_number_format">Formát telefónneho čísla nie je správny</string>
     <string name="passport_wrong_vcode">Zadaný kód nie je správny</string>
-    <string name="passport_xiaomi_account_dspt">Prihláste sa do MiCloud, Obchodu s témami a mnoho iných služieb Mi s jednym účtom.</string>
-    <string name="passport_xiaomi_account_sec_dspt2">Internetové pripojenie je vyžadované pre prihlásenie sa do vášho Mi účtu. Prístup k polohe a MiCloud bude povolený automaticky.</string>
-    <string name="passport_xiaomi_account_sec_dspt2_vip">Internetové pripojenie je vyžadované pre prihlásenie sa do vášho Mi účtu. Prístup k polohe, MiCloud a Mi VIP bude povolený automaticky.</string>
+    <string name="passport_xiaomi_account_dspt">Prihláste sa do MiCloud, Obchodu s témami a mnoho iných služieb Xiaomi s jednym účtom.</string>
+    <string name="passport_xiaomi_account_sec_dspt2">Internetové pripojenie je vyžadované pre prihlásenie sa do vášho Xiaomi účtu. Prístup k polohe a MiCloud bude povolený automaticky.</string>
+    <string name="passport_xiaomi_account_sec_dspt2_vip">Internetové pripojenie je vyžadované pre prihlásenie sa do vášho Xiaomi účtu. Prístup k polohe, MiCloud a Xiaomi VIP bude povolený automaticky.</string>
     <string name="password">Heslo</string>
     <string name="permission_not_available">Vyžadovanie povolení, dotykom povolíte</string>
     <string name="permission_tips_caesura">,</string>
@@ -341,13 +341,13 @@ Skontrolujte aj SPAM."</string>
     <string name="title_contact_permission">Povoliť prístup ku Kontaktom</string>
     <string name="title_floating_window_permission">Povoliť vyskakovacie okná</string>
     <string name="title_record_audio_permission">Povoliť nahrávanie zvuku</string>
-    <string name="user_id">Mi účet: %s</string>
+    <string name="user_id">Xiaomi účet: %s</string>
     <string name="validating_checking">Overovanie...</string>
     <string name="vcode_empty">2-stupňové overenie</string>
     <string name="verification_pls_enter_4_ver">Zadajte kód</string>
     <string name="verified_failure">Nebolo možné overiť</string>
     <string name="verified_success">Overené</string>
     <string name="voip_i_know">Rozumiem</string>
-    <string name="wrong_password">Mi ID alebo heslo nie je správne</string>
-    <string name="xiaomi_accont_login">Mi účet</string>
+    <string name="wrong_password">Xiaomi ID alebo heslo nie je správne</string>
+    <string name="xiaomi_accont_login">Xiaomi účet</string>
 </resources>
