--- a/Slovak/main/MiuiPackageInstaller.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiPackageInstaller.apk/res/values-sk/strings.xml
@@ -284,12 +284,12 @@ Všetky predchádzajúce používateľské údaje budú uložené."</string>
     <string name="dlg_app_replacement_statement_with_version">%1$s (%2$s) nahradí už nainštalovanú verziu (%3$s). Dáta aplikácie ostanú zachované.</string>
     <string name="dlg_app_replacement_title">Nahradiť aplikáciu?</string>
     <string name="dlg_appstore_notice">"Nemôžeme overiť pravosť alebo bezpečnosť aplikácií zo zdrojov mimo Google Play."</string>
-    <string name="dlg_game_center_intercept_game_center_install">Inštalovať z Mi Games</string>
+    <string name="dlg_game_center_intercept_game_center_install">Inštalovať z Xiaomi Games</string>
     <string name="dlg_game_center_intercept_install">Aj tak nainštalovať</string>
-    <string name="dlg_game_center_intercept_msg">Inštalácia hier tretích strán môže predstavovať bezpečnostné riziká. Stiahnite si a nainštalujte Mi Games, aby ste získali prístup k zabezpečeným verziám aplikácií.</string>
+    <string name="dlg_game_center_intercept_msg">Inštalácia hier tretích strán môže predstavovať bezpečnostné riziká. Stiahnite si a nainštalujte Xiaomi Games, aby ste získali prístup k zabezpečeným verziám aplikácií.</string>
     <string name="dlg_game_center_intercept_title">Upozornenie</string>
-    <string name="dlg_mimarket_intercept_mimarket_install">Inštalovať z obchodu Mi App Store</string>
-    <string name="dlg_mimarket_intercept_msg">Inštalácia aplikácií tretích strán môže predstavovať bezpečnostné riziká. Stiahnite si a nainštalujte Mi App Store, aby ste získali prístup k zabezpečeným verziám aplikácií.</string>
+    <string name="dlg_mimarket_intercept_mimarket_install">Inštalovať z obchodu Xiaomi App Store</string>
+    <string name="dlg_mimarket_intercept_msg">Inštalácia aplikácií tretích strán môže predstavovať bezpečnostné riziká. Stiahnite si a nainštalujte Xiaomi App Store, aby ste získali prístup k zabezpečeným verziám aplikácií.</string>
     <string name="dlg_msg_unoffical">Nie je možné aktualizovať systémovú aplikáciu z neoficiálneho zdroja</string>
     <string name="dlg_msg_unoffical_ok">OK</string>
     <string name="dlg_ok">OK</string>
@@ -349,11 +349,11 @@ Všetky predchádzajúce používateľské údaje budú uložené."</string>
     <string name="friday">Piatok</string>
     <string name="friday_short">Pia</string>
     <string name="friday_shortest">Pia</string>
-    <string name="game_center_install">Inštalovať z Mi Games</string>
-    <string name="game_center_install_tips">Stiahnite si a nainštalujte Mi Games a získajte ďalšie funkcie</string>
+    <string name="game_center_install">Inštalovať z Xiaomi Games</string>
+    <string name="game_center_install_tips">Stiahnite si a nainštalujte Xiaomi Games a získajte ďalšie funkcie</string>
     <string name="game_center_intercept_trust_app">Dôverujem tejto aplikácii a prijímam možné riziká.</string>
     <string name="game_center_intercept_warning_msg">"Táto aplikácia nebola skontrolovaná spoločnosťou Xiaomi na prítomnosť vírusov. Nainštalujte si túto aplikáciu z Hier, aby ste sa vyhli bezpečnostným rizikám."</string>
-    <string name="game_center_lunch_error">Najprv si nainštalujte Mi Games</string>
+    <string name="game_center_lunch_error">Najprv si nainštalujte Xiaomi Games</string>
     <string name="generic_error_dlg_text">Aplikáciu nie je možné odinštalovať.</string>
     <string name="generic_error_dlg_title">Chyba</string>
     <string name="grant_confirm_question">Chcete udeliť nasledujúce povolenia? Získate prístup k:</string>
