--- a/Slovak/main/PersonalAssistantGlobal.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PersonalAssistantGlobal.apk/res/values-sk/strings.xml
@@ -3,7 +3,7 @@
     <string name="Clock_main">Alarm</string>
     <string name="Clock_parent">Hodiny</string>
     <string name="MiDrop_main">Odoslať</string>
-    <string name="MiDrop_parent">Mi Drop</string>
+    <string name="MiDrop_parent">Xiaomi Drop</string>
     <string name="Paytm_main">Zaplatiť</string>
     <string name="Paytm_parent">Paytm</string>
     <string name="Whatsapp_main">Fotografie</string>
