--- a/Slovak/main/XiaomiSimActivateService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/XiaomiSimActivateService.apk/res/values-sk/strings.xml
@@ -6,14 +6,14 @@
     <string name="activate_auto_sms_notification_desc_2_cards">Odoslaná SMS zo SIM karty %s pre aktiváciu \"Vyhľadania zariadenia\\"</string>
     <string name="activate_auto_sms_notification_title">Aktivácia SIM karty</string>
     <string name="activate_feature_call_log_sync">Záznamy o volaní</string>
-    <string name="activate_feature_default_name">Mi Služby</string>
+    <string name="activate_feature_default_name">Xiaomi Služby</string>
     <string name="activate_feature_default_title">Xiaomi</string>
     <string name="activate_feature_find_device">Vyhľadávanie zariadenia sa nemôže pripojiť k sieti</string>
     <string name="activate_feature_mms_sync">SMS</string>
     <string name="activate_feature_mx">Cloud správy</string>
     <string name="activate_feature_mx_and_voip">MiSprávy</string>
-    <string name="activate_feature_register_xiaomi_account">Nastavenie Mi účtu</string>
-    <string name="activate_feature_verify_mx_token">Overenie Mi účtu</string>
+    <string name="activate_feature_register_xiaomi_account">Nastavenie Xiaomi účtu</string>
+    <string name="activate_feature_verify_mx_token">Overenie Xiaomi účtu</string>
     <string name="activate_history_canceled_overview">Aktivácia SIM karty bola zrušená. Aktivácia je spustená \"%1$s\".</string>
     <string name="activate_history_cancelled">zrušené</string>
     <string name="activate_history_multisim_canceled_overview">Aktivácia SIM karty %2$d bola zrušená. Aktivácia je spustená \"%1$s\".</string>
@@ -29,8 +29,8 @@
     <string name="activate_phone_failed_notif_title">Nie je možné aktivovať SIM kartu</string>
     <string name="activate_phone_failed_notif_title_msim">Nie je možné aktivovať SIM kartu %d</string>
     <string name="activate_phone_failed_notif_title_sim">Nebolo možné aktivovať %2$s cez SIM %1$d</string>
-    <string name="activate_phone_register_xiaomi_account_success_notif_title_sim">Vytvorený Mi účet cez SIM %d</string>
-    <string name="activate_phone_registered_xiaomi_account_failed_notif_title_sim">Nebolo možné vytvoriť Mi účet cez SIM %d</string>
+    <string name="activate_phone_register_xiaomi_account_success_notif_title_sim">Vytvorený Xiaomi účet cez SIM %d</string>
+    <string name="activate_phone_registered_xiaomi_account_failed_notif_title_sim">Nebolo možné vytvoriť Xiaomi účet cez SIM %d</string>
     <string name="activate_phone_server_failed_notif_title">Nebolo možné aktivovať %s</string>
     <string name="activate_phone_server_success_notif_title">Aktivované %s</string>
     <string name="activate_phone_success_notif_title">SIM karta aktivovaná</string>
@@ -80,9 +80,9 @@ Zadajte vaše telefónne číslo novej SIM karty pre aktiváciu %s"</string>
     <string name="activate_popup_desc_new_mixed_sim_cards">Vaše SIM karty sú zmenené. SMS a medzinárodná SMS budú odoslané pre aktiváciu vašich 2 SIM kariet a funkcií ako %s</string>
     <string name="activate_popup_desc_new_sim_card">Vaša SIM karta je zmenená. SMS bude odoslaná pre aktiváciu vašej SIM karty a funkcií ako %s</string>
     <string name="activate_popup_desc_new_sim_card_downlink">Vaša SIM karta je zmenená. Zadajte číslo novej SIM karty pre aktiváciu funkcií ako %s</string>
-    <string name="activate_popup_desc_register_account">SMS bude odoslaná pre registráciu vášho Mi účtu</string>
-    <string name="activate_popup_desc_register_account_downlink">Zadajte číslo vašej SIM karty pre aktiváciu Mi účtu</string>
-    <string name="activate_popup_desc_register_account_intl">Bude odoslaná medzinárodná SMS pre aktiváciu vášho Mi účtu</string>
+    <string name="activate_popup_desc_register_account">SMS bude odoslaná pre registráciu vášho Xiaomi účtu</string>
+    <string name="activate_popup_desc_register_account_downlink">Zadajte číslo vašej SIM karty pre aktiváciu Xiaomi účtu</string>
+    <string name="activate_popup_desc_register_account_intl">Bude odoslaná medzinárodná SMS pre aktiváciu vášho Xiaomi účtu</string>
     <string name="activate_popup_desc_sim_card">SMS bude odoslaná pre aktiváciu vašej SIM karty a funkcií ako %s</string>
     <string name="activate_popup_desc_sim_card_downlink">Zadajte číslo vašej SIM karty pre aktiváciu a funkcií ako %s</string>
     <string name="activate_popup_desc_sim_card_downlink_msg">Pre aktiváciu %2$s, zadajte telefónne číslo SIM %1$d.</string>
@@ -108,15 +108,15 @@ Zadajte vaše telefónne číslo novej SIM karty pre aktiváciu %s"</string>
     <string name="activate_popup_title_register_account">Registrovať účet</string>
     <string name="activate_popup_title_upload_diagnosis_info">Nie je možné aktivovať SIM kartu</string>
     <string name="activate_progress_status_title">Aktivácia %s…</string>
-    <string name="activate_registered_xiaomi_account_failed_notif_title">Nebolo možné vytvoriť Mi účet</string>
-    <string name="activate_registered_xiaomi_account_success_notif_title">Mi účet vytvorený</string>
+    <string name="activate_registered_xiaomi_account_failed_notif_title">Nebolo možné vytvoriť Xiaomi účet</string>
+    <string name="activate_registered_xiaomi_account_success_notif_title">Xiaomi účet vytvorený</string>
     <string name="activate_status_desc_acquire_phone_number">Načítavanie čísla telefónu zo servera</string>
     <string name="activate_status_desc_acquire_phone_number_server_error">Chyba servera počas načítavania čísla telefónu.</string>
     <string name="activate_status_desc_acquire_phone_number_server_no_info">Nie je možné načítať číslo telefónu.</string>
     <string name="activate_status_desc_acquire_phone_number_server_no_info_tip">Nebolo možné overiť telefónne číslo. skontrolujte SIM %d.</string>
     <string name="activate_status_desc_acquire_phone_number_server_no_info_tip_one_sim">Nebolo možné skontrolovať telefónne číslo. Skontrolujte SIM kartu.</string>
-    <string name="activate_status_desc_checking_xiaomi_account">Kontrola Mi účtu na serveri</string>
-    <string name="activate_status_desc_checking_xiaomi_account_server_error">Vyskytla sa chyba servera počas kontroly Mi účtu</string>
+    <string name="activate_status_desc_checking_xiaomi_account">Kontrola Xiaomi účtu na serveri</string>
+    <string name="activate_status_desc_checking_xiaomi_account_server_error">Vyskytla sa chyba servera počas kontroly Xiaomi účtu</string>
     <string name="activate_status_desc_completed_with_sms_sent">Odoslaná SMS pre aktiváciu SIM</string>
     <string name="activate_status_desc_completed_with_sms_sent_for_activate_server">%d bude odoslaná bežná SMS pre aktiváciu zariadenia.</string>
     <string name="activate_status_desc_device_id_error">Chybný IMEI</string>
@@ -130,8 +130,8 @@ Zadajte vaše telefónne číslo novej SIM karty pre aktiváciu %s"</string>
     <string name="activate_status_desc_query_activation_server_info">Získavanie informácií…</string>
     <string name="activate_status_desc_registering_sim_account">Registrácia SIM karty na serveri</string>
     <string name="activate_status_desc_registering_sim_account_server_error">Chyba servera počas registrácie SIM karty</string>
-    <string name="activate_status_desc_registering_xiaomi_account">Registrácia Mi účtu na serveri</string>
-    <string name="activate_status_desc_registering_xiaomi_account_server_error">Chyba servera počas registrácie Mi účtu</string>
+    <string name="activate_status_desc_registering_xiaomi_account">Registrácia Xiaomi účtu na serveri</string>
+    <string name="activate_status_desc_registering_xiaomi_account_server_error">Chyba servera počas registrácie Xiaomi účtu</string>
     <string name="activate_status_desc_request_activation_sms">Požiadavka na aktivačnú SMS zo servera do vášho zariadenia</string>
     <string name="activate_status_desc_request_activation_sms_server_error">Chyba počas odosielania požiadavky na aktivačnú SMS zo servera do vášho zariadenia</string>
     <string name="activate_status_desc_request_activation_sms_server_error_tip">Nebolo možné prijať aktivačnú SMS. Skontrolujte SIM %d.</string>
@@ -145,8 +145,8 @@ Zadajte vaše telefónne číslo novej SIM karty pre aktiváciu %s"</string>
     <string name="activate_status_title_activating">Aktivácia vašej SIM karty</string>
     <string name="activate_status_title_activating_msim">Aktivácia vašej SIM karty %d</string>
     <string name="activate_status_title_activating_sim">Aktivácia %2$s cez SIM %1$d…</string>
-    <string name="activate_status_title_registering_xiaomi_account">Vytváranie Mi účtu…</string>
-    <string name="activate_status_title_registering_xiaomi_account_sim">Vytváranie Mi účtu cez SIM %d…</string>
+    <string name="activate_status_title_registering_xiaomi_account">Vytváranie Xiaomi účtu…</string>
+    <string name="activate_status_title_registering_xiaomi_account_sim">Vytváranie Xiaomi účtu cez SIM %d…</string>
     <string name="agree">Súhlasím</string>
     <string name="app_name">Aktivácia SIM karty</string>
     <string name="checking_client">Kontrola aktivačného prostredia</string>
@@ -164,10 +164,10 @@ ID zariadenia musí byť platný IMEI alebo MAC adresa. Bez platného ID nebudú
     <string name="error_sim_not_in_service_tip">SIM %d sa nemôže pripojiť k sieti. Skontrolujte SIM kartu.</string>
     <string name="error_sim_not_in_service_tip_one_sim">Nebolo možné pripojiť sa k sieti. Skontrolujte SIM kartu.</string>
     <string name="explain_activate_feature_server_title">Aktivovať %s</string>
-    <string name="explain_activate_register_xiaomi_account_title">Vytvoriť Mi účet</string>
+    <string name="explain_activate_register_xiaomi_account_title">Vytvoriť Xiaomi účet</string>
     <string name="explain_activate_send_sms_permission_msg">Pre aktiváciu %s, je požadované povolenie pre odoslanie aktivačnej SMS.</string>
     <string name="explain_send_sms_permission_button">Overiť</string>
-    <string name="explain_send_sms_permission_msg">Pre povolenie %s, Mi Service Framework odošle SMS pre overenie vášho telefónneho čísla. Táto SMS bude spoplatnená bežnou cenou u vášho operátora.</string>
+    <string name="explain_send_sms_permission_msg">Pre povolenie %s, Xiaomi Service Framework odošle SMS pre overenie vášho telefónneho čísla. Táto SMS bude spoplatnená bežnou cenou u vášho operátora.</string>
     <string name="explain_send_sms_permission_title">Overenie vášho telefónneho čísla</string>
     <string name="fmt_date_long_month">MMMM</string>
     <string name="fmt_date_long_month_day">d. MMMM</string>
@@ -256,7 +256,7 @@ ID zariadenia musí byť platný IMEI alebo MAC adresa. Bez platného ID nebudú
     <string name="sim_activated_failed_msg">Nebolo možné aktivovať službu. Skúste to neskôr.</string>
     <string name="sim_unactivated_feature_title">%s nebola aktivovaná</string>
     <string name="sim_unactivated_msg">Táto služba nebola aktivovaná. Skúste to znova.</string>
-    <string name="sim_unactivated_register_xiaomi_account_feature_title">Mi účet nebol aktivovaný</string>
+    <string name="sim_unactivated_register_xiaomi_account_feature_title">Xiaomi účet nebol aktivovaný</string>
     <string name="sim_unactivated_title">Vaša SIM karta nie je aktivovaná</string>
     <string name="sunday">Nedeľa</string>
     <string name="sunday_short">Ned</string>
