--- a/Slovak/main/miui.apk/res/values-sk/strings.xml
+++ b/Slovak/main/miui.apk/res/values-sk/strings.xml
@@ -102,9 +102,9 @@
     <string name="com_miui_weather2">Počasie</string>
     <string name="com_xiaomi_drivemode">Car mode</string>
     <string name="com_xiaomi_gamecenter">Hry</string>
-    <string name="com_xiaomi_jr">Mi Finance</string>
+    <string name="com_xiaomi_jr">Xiaomi Finance</string>
     <string name="com_xiaomi_scanner">Skener</string>
-    <string name="com_xiaomi_shop">Mi Store</string>
+    <string name="com_xiaomi_shop">Xiaomi Store</string>
     <string name="com_xiaomi_youpin">Youpin</string>
     <string name="confirm_description">Potvrdiť</string>
     <string name="copyright">Autorské práva</string>
@@ -196,8 +196,8 @@
     <string name="noon">PM</string>
     <string name="note">Poznámka</string>
     <string name="organization">Organizácia</string>
-    <string name="perm_payment_dspt">Povoliť aplikácii platiť cez Mi platby</string>
-    <string name="perm_payment_lab">Mi platby</string>
+    <string name="perm_payment_dspt">Povoliť aplikácii platiť cez Xiaomi platby</string>
+    <string name="perm_payment_lab">Xiaomi platby</string>
     <string name="permdesc_sendSmsNoConfirmation">Povolí aplikácií odoslať SMS. Vaše mesačné poplatky sa môžu výrazne navýšiť ak podvodné aplikácie budú odosielať SMS bez vášho vedomia.</string>
     <string name="permlab_sendSmsNoConfirmation">odoslať SMS bez potvrdenia</string>
     <string name="phone">Telefón</string>
