--- a/Slovak/main/AuthManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/AuthManager.apk/res/values-sk/strings.xml
@@ -237,9 +237,9 @@
     <string name="HIPS_Perm_Wakelock">Zabrániť spánku</string>
     <string name="HIPS_Perm_Wakelock_Desc">Má právo zabrániť spánku zariadenia</string>
     <string name="HIPS_Perm_Wakelock_Hint">%1$s má právo zabrániť spánku zariadenia</string>
-    <string name="HIPS_Perm_Xiaomi_Account">Mi účet</string>
-    <string name="HIPS_Perm_Xiaomi_Account_Desc">Prístup k vášmu Mi účtu</string>
-    <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s apl. má prístup k vášmu Mi účtu</string>
+    <string name="HIPS_Perm_Xiaomi_Account">Xiaomi účet</string>
+    <string name="HIPS_Perm_Xiaomi_Account_Desc">Prístup k vášmu Xiaomi účtu</string>
+    <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s apl. má prístup k vášmu Xiaomi účtu</string>
     <string name="HIPS_Perm_add_voicemail">Hlasové správy</string>
     <string name="HIPS_Perm_add_voicemail_Desc">Pridať hlasové správy</string>
     <string name="HIPS_Perm_background_start_activity">Spustiť na pozadí</string>
