--- a/Slovak/main/CleanMaster.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CleanMaster.apk/res/values-sk/strings.xml
@@ -789,7 +789,7 @@
     <string name="tips_low_storage_dialog_title">Dochádza vám voľne miesto</string>
     <string name="tips_of_app_manage">Odinštalovať nepoužívané aplikácie a ušetriť tak miesto na úložisku</string>
     <string name="tips_of_auto_launch_manage">Zakázať málo používaným aplikáciám automaticky sa spustiť na pozadí</string>
-    <string name="tips_of_cloud_service">Prihláste sa svojim Mi účtom pre využívanie viac služieb</string>
+    <string name="tips_of_cloud_service">Prihláste sa svojim Xiaomi účtom pre využívanie viac služieb</string>
     <string name="tips_of_connect">Pripojte sa k internetu pre využívanie viac funkcií Optimalizácie</string>
     <string name="tips_of_garbage_cloud_scan">Vyhľadať skryté zbytočné súbory kontrolou cloudu</string>
     <string name="tips_of_garbage_data_set">Aktualizujte databázu čistenia pre nájdenie viac nepotrebných súborov</string>
