--- a/Slovak/main/MiuiBluetooth.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiBluetooth.apk/res/values-sk/strings.xml
@@ -21,7 +21,7 @@
     <string name="config_net_not_my_device">Zrušiť</string>
     <string name="confignet_app_download">Inštalovať</string>
     <string name="confignet_cancel">Zrušiť</string>
-    <string name="confignet_download_title">Ak chcete pokračovať, nainštalujte Mi Fitness</string>
+    <string name="confignet_download_title">Ak chcete pokračovať, nainštalujte Xiaomi Fitness</string>
     <string name="copy">Kopírovať</string>
     <string name="device_picker">Bluetooth zariadenie</string>
     <string name="disconnect">Odpojiť</string>
@@ -52,7 +52,7 @@
     <string name="fast_connect_new_feture_title">Čo je nové</string>
     <string name="fast_connect_nzbt_reset">Podržte horné tlačidlo %1$s sekúnd kým sa nevypne</string>
     <string name="fast_connect_reset_common">Resetujte toto zariadenie pre možnosť ho spárovať</string>
-    <string name="fast_connect_same_account_content">Bluetooth zariadenia môžu byť synchr. s vašim Mi účtom a pripojené bez spárovania na ostatných zariadeniach.</string>
+    <string name="fast_connect_same_account_content">Bluetooth zariadenia môžu byť synchr. s vašim Xiaomi účtom a pripojené bez spárovania na ostatných zariadeniach.</string>
     <string name="fast_connect_same_accout_devices_connecting">Pripájanie cez Xiaomi Cloud…</string>
     <string name="fast_connect_same_accout_devices_title">Máte pripojené %1$s k ostatným zariadeniam</string>
     <string name="fast_connect_same_accout_ok">OK</string>
