--- a/Slovak/main/MiuiWallpaper.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiWallpaper.apk/res/values-sk/strings.xml
@@ -22,8 +22,8 @@
     <string name="geometry_title">Geometria</string>
     <string name="mars_summary">Mars vždy fascinoval ľudstvo</string>
     <string name="mars_title">Červená planéta</string>
-    <string name="mi_wallpaper_loading">Načítavanie Mi Tapety...</string>
-    <string name="mi_wallpaper_title">Mi Tapeta</string>
+    <string name="mi_wallpaper_loading">Načítavanie Xiaomi Tapety...</string>
+    <string name="mi_wallpaper_title">Xiaomi Tapeta</string>
     <string name="miui_clock_city_name_local">Lokálny</string>
     <string name="miui_clock_city_name_second">Druhé hodiny</string>
     <string name="miui_lock_screen_date">dd.MM EEEE</string>
