--- a/Slovak/main/PersonalAssistantPlugin.apk/res/values-sk/strings.xml
+++ b/Slovak/main/PersonalAssistantPlugin.apk/res/values-sk/strings.xml
@@ -23,7 +23,7 @@
     <string name="agenda_no_title">Nepomenované</string>
     <string name="alipay_scan">Skener</string>
     <string name="already">Ukončené:</string>
-    <string name="app_label">Mi Asistent</string>
+    <string name="app_label">Xiaomi Asistent</string>
     <string name="apps_label">Aplikácie</string>
     <string name="arrive">Landing</string>
     <string name="assistant_day_deadline">Last day</string>
@@ -75,7 +75,7 @@
     <string name="empty_health_card_btn_get">Stiahnuť MiFit</string>
     <string name="empty_health_card_btn_login">Prihlásiť sa</string>
     <string name="empty_health_card_login_tip">Prihláste sa do MiFit a spárujte MiBand.</string>
-    <string name="empty_health_card_login_tip_vip">Sign in to Mi Fitand turn on step counter.</string>
+    <string name="empty_health_card_login_tip_vip">Sign in to Xiaomi Fitand turn on step counter.</string>
     <string name="empty_health_card_tip">Nainštalujte MiFit a spárujte MiBand.</string>
     <string name="empty_health_card_tip_vip">Nainštalujte MiFit a povoľte počítadlo krokov.</string>
     <string name="fav_more">All Favorites</string>
